# Projet-Allegro-Etienne-Paul-Anne-Laure-Dalia

./: README.md
projet ECECOOK/: CMakeLists.txt  Pseudo.c  RegleDuJeu.c  chagement_niveau.c  commande.c  headers.h  jouer.c  main.c  menu.c  niveau.c
projet allegro/: CMakeLists.txt  Header.h  deplacement.cpp  main.c  menu.c
projet_ECECOOK/projet ECECOOK/: commande.c  headers.h  jouer.c  menu.c
untitled4/: CMakeLists.txt  header.h  main.c
